@@ -1,12 +1,12 @@
 package glowredman.defaultserverlist;
 
 import java.io.Reader;
-import java.lang.reflect.Type;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -35,7 +35,7 @@ public class Config {
 			ConfigObj config = new ConfigObj();
 			
 			if(!Files.exists(path)) {
-				Files.writeString(path, gson.toJson(config), StandardCharsets.UTF_8);
+				Files.write(path, Arrays.asList(gson.toJson(config)), StandardCharsets.UTF_8);
 			} else {
 				fileReader = Files.newBufferedReader(path, StandardCharsets.UTF_8);
 				config = gson.fromJson(fileReader, ConfigObj.class);
@@ -43,10 +43,8 @@ public class Config {
 			
 			Map<String, String> servers;
 			if(config.useURL) {
-				Type type = new TypeToken<Map<String, String>>() {
-					private static final long serialVersionUID = -1786059589535074931L;}.getType();
 				urlReader = new URLReader(new URL(config.url), StandardCharsets.UTF_8);
-				servers = gson.fromJson(urlReader, type);
+				servers = gson.fromJson(urlReader, new TypeToken<Map<String, String>>() {private static final long serialVersionUID = -1786059589535074931L;}.getType());
 			} else {
 				servers = config.servers;
 			}
